use globalThis instead of window

--- a/public/views/_default.html
+++ b/public/views/_default.html
@@ -378,7 +378,7 @@
 
     if (resolvedLocaleKey !== currentLocaleKey) {
       // Redirect once with the fully resolved path.
-      window.location.assign(`${mapp.host}?locale=${resolvedLocaleKey}`);
+      globalThis.location.assign(`${mapp.host}?locale=${resolvedLocaleKey}`);
     }
 
     // Recursive function to build dependent dropdowns
