--- a/public/css/elements/_dialog.css
+++ b/public/css/elements/_dialog.css
@@ -81,6 +81,11 @@ dialog {
     transform: translate(-50%, -50%);
   }
 
+  iframe {
+    width: 100%;
+    height: 100%;
+  }
+
   &.popout .material-symbols-outlined.toggle-on {
     &::after {
       color: var(--color-active);
