--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -62,6 +62,9 @@
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+  .material-symbols-outlined {
+    font-size: 1.5em;
+  }
 }
 .outlined {
   border: 1px solid var(--color-primary);
