Locale access fixed;

--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -698,6 +698,7 @@ dialog {
     transform: translate(-50%, -50%);
   }
   iframe {
+    position: absolute;
     width: 100%;
     height: 100%;
   }
