Nested locales w/ Nested Roles (#2603)
* nested locales test

* remove old params

* update nested locales test

* nested locales initial logic

* adjust nested logic role logic

* refactor: reduce complexity of objTemplate in mergeTemplates

* correct comment

* correct test parentId

* spread params in instead of mutate :)

* update tests

* update tests

* update getLocale imports

* correct test methods loop

* visitedKeys in traverseNestedLocales

* visted locale

* add self reference test

* no role locale and ⭐ role

* default parameter parentRoles should be last

* remove getLocaleKey method

* fix formatting

* update docs

* object/template role

* OBJ_ROLE and TEMPLATE_ROLE

* layer_template key

* roles combine utility

* fix nested locales

* further correction of nested locales & roles

* check for duplicate roles

* reduce complexity _workspace 😪

* better variable readability

* update nested locales drop down

* use characer class

* nested locales cache

* _workspace formatting

* remove role traversal

* updated locales test

* exclude nested locales from locales loop.

* biome formatting

* update tests

* structured clone test

* add in logic to prevent cache mutation

* fix optional chaining issue

* chained expression for merged_layers check

* locale.merged_layers assignment and check

* biome fix

* fix biome formatting

* return locales clone from cachedTemplates

* loadLocale documentation

* localeDropdowns nested

* remove commented out code

* add in locale test

* update workspace test

* combine locale roles

* update roles context

* processRoles documentation

* comment isLeaf

* ensure layer roles are checked before merging

* remove isLeaf

* fix return statement in getLocale module

* checkRoles and empty roles

* fix for obj.role restrcitions without templates.

* update tests

* update role nesting

* fix templates

* fix roles that were merging incorrectly

* comment out checkRoles method

* remove logic that is not usefd

* f

--- a/public/views/_default.html
+++ b/public/views/_default.html
@@ -284,7 +284,7 @@
       `${mapp.host}/api/workspace/locales`,
     );
 
-      // Assign locale from current [URL parameter] or as first key from locales array.
+    // Assign locale from current [URL parameter] or as first key from locales array.
     let locale = mapp.hooks.current.locale || locales[0]?.key
 
     // Use 'locale' as default if undefined.
@@ -313,47 +313,25 @@
       Object.assign(locale, mapp.user?.locale)
     }
 
-      // Check whether the locale supports a userLocale
-      if (mapp.hooks.current.userlocale) {
-        // Assign the userlocale value as name to check for a stored userlocale
-        locale.name = mapp.hooks.current.userlocale;
+    // Check whether the locale supports a userLocale
+    if (mapp.hooks.current.userlocale) {
+      // Assign the userlocale value as name to check for a stored userlocale
+      locale.name = mapp.hooks.current.userlocale;
 
-        // Check whether a userLocale is stored for the current user|workspace
-        const userLocale = await mapp.utils.userLocale.get(locale);
+      // Check whether a userLocale is stored for the current user|workspace
+       const userLocale = await mapp.utils.userLocale.get(locale);
 
-        if (userLocale) {
-          locale = userLocale;
-        }
+      if (userLocale) {
+        locale = userLocale;
       }
-
-    if (locale.locales) {
-
-      // Get list of accessible locales from Workspace API.
-      const nestedLocales = await mapp.utils.xhr(
-        `${mapp.host}/api/workspace/locales?locale=${locale.key}`,
-      );
-
-      // The nested locales for the current locale will be spread into the locales array.
-      locales = [...locales, ...nestedLocales]
     }
 
     const layersPanel = mapp.utils.html.node`<div id="layers" class="active">`
 
-    // Add locale dropdown to layers panel if multiple locales are accessible.
-    if (locales.length > 1) {
-      const localesDropdown = mapp.ui.elements.dropdown({
-        data_id: 'locales-dropdown',
-        placeholder: locale.name || locale.key,
-        entries: locales.map((locale) => ({
-          title: locale.name || locale.key,
-          key: locale.key,
-        })),
-        callback: (e, entry) => {
-          window.location.assign(`${mapp.host}?locale=${entry.key}`);
-        },
-      });
+    const localesInterface = await mapp.ui.elements.locales(locale, locales);
 
-      layersPanel.appendChild(localesDropdown);
+    if(localesInterface){
+      layersPanel.append(localesInterface);
     }
 
     if (!window.ol) await mapp.utils.olScript();
